# duckOS

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CNAME  CONTRIBUTING.md  INSTRUCTIONS.md  README.md  Vagrantfile  index.html
kernel/: Atomic.h  CMOS.cpp  CMOS.h  CMakeLists.txt  CommandLine.cpp  CommandLine.h  IO.cpp  IO.h  KernelMapper.cpp  KernelMapper.h  Processor.cpp  Processor.h  Result.cpp  Result.hpp  StackWalker.cpp  StackWalker.h  User.cpp  User.h  VMWare.cpp  VMWare.h  bootlogo.h  constructors.cpp  constructors.h  icxxabi.cpp  icxxabi.h  kernel.ld  keyboard.cpp  keyboard.h  kmain.cpp  kmain.h  kstddef.cpp  kstddef.h  kstdio.cpp  kstdio.h  multiboot.h  pit.cpp  pit.h  random.cpp  random.h  shell.cpp  (+1 more)
kernel/api/: cdefs.h  endian.h  errno.h  fcntl.h  futex.h  hid.h  if.h  ifaddrs.h  in.h  ioctl-types.h  ioctl.h  ipv4.h  mmap.h  net.h  page_size.h  poll.h  ptrace.h  ptrace_internal.h  registers.h  resource.h  route.h  sched.h  sgtty.h  shm.h  signal.h  socket.h  stat.h  stdarg.h  stddef.h  stdint.h  strerror.c  strerror.h  tcp.h  termios.h  time.h  types.h  udp.h  un.h  unistd.h  utsname.h  (+1 more)
kernel/arch/: Processor.h  registers.h  tasking.h
kernel/asm/: disk.s  int.s  paging.s  print_util.s  startup.s  syscall.s  tasking.s  timing.s
kernel/device/: AC97Device.cpp  AC97Device.h  ATA.h  BlockDevice.cpp  BlockDevice.h  BochsVGADevice.cpp  BochsVGADevice.h  CharacterDevice.cpp  CharacterDevice.h  Device.cpp  Device.h  DiskDevice.cpp  DiskDevice.h  I8042.cpp  I8042.h  KernelLogDevice.cpp  KernelLogDevice.h  KeyboardDevice.cpp  KeyboardDevice.h  MouseDevice.cpp  MouseDevice.h  MultibootVGADevice.cpp  MultibootVGADevice.h  NullDevice.cpp  NullDevice.h  PATADevice.cpp  PATADevice.h  PIODevice.cpp  PIODevice.h  PartitionDevice.cpp  PartitionDevice.h  RandomDevice.cpp  RandomDevice.h  TTYDevice.cpp  TTYDevice.h  VGADevice.cpp  VGADevice.h  ZeroDevice.cpp  ZeroDevice.h  ata.cpp  (+3 more)
kernel/filesystem/: CachedFilesystemInode.cpp  CachedFilesystemInode.h  DirectoryEntry.cpp  DirectoryEntry.h  Ext2.cpp  Ext2.h  File.cpp  File.h  FileBasedFilesystem.cpp  FileBasedFilesystem.h  FileDescriptor.cpp  FileDescriptor.h  FileSystem.cpp  FileSystem.h  Filesystem.cpp  Filesystem.h  Inode.cpp  Inode.h  InodeFile.cpp  InodeFile.h  InodeMetadata.cpp  InodeMetadata.h  LinkedInode.cpp  LinkedInode.h  Pipe.cpp  Pipe.h  VFS.cpp  VFS.h
kernel/font8x8/: font8x8.h  font8x8_basic.h  font8x8_block.h  font8x8_box.h  font8x8_control.h  font8x8_ext_latin.h  font8x8_greek.h  font8x8_hiragana.h  font8x8_latin.h  font8x8_misc.h  font8x8_sga.h
kernel/interrupt/: IRQHandler.cpp  IRQHandler.h  idt.cpp  idt.h  interrupt.cpp  interrupt.h  irq.cpp  irq.h  isr.cpp  isr.h  syscall.cpp  syscall.h
kernel/kstd/: Arc.h  Bitmap.h  Function.h  Iteration.h  Iterator.h  KLog.cpp  KLog.h  LRUCache.h  ListQueue.h  Optional.cpp  Optional.h  SharedPtr.h  circular_queue.hpp  cstddef.cpp  cstddef.h  cstring.cpp  cstring.h  defines.h  icxxabi.cpp  icxxabi.h  kstddef.cpp  kstddef.h  kstdio.cpp  kstdio.h  kstdlib.cpp  kstdlib.h  map.hpp  pair.hpp  queue.hpp  shared_ptr.hpp  stdlib.h  string.cpp  string.h  type_traits.h  types.h  unique_ptr.hpp  unix_types.h  utility.h  vector.hpp
kernel/memory/: AnonymousVMObject.cpp  AnonymousVMObject.h  AnonymousVMRegion.cpp  AnonymousVMRegion.h  BuddyZone.cpp  BuddyZone.h  Bytes.cpp  Bytes.h  CoWParent.cpp  CoWParent.h  InodeVMObject.cpp  InodeVMObject.h  KBuffer.cpp  KBuffer.h  LinkedMemoryRegion.cpp  LinkedMemoryRegion.h  Memory.cpp  Memory.h  MemoryBitmap.hpp  MemoryManager.cpp  MemoryManager.h  MemoryMap.cpp  MemoryMap.h  MemoryRegion.cpp  MemoryRegion.h  PageDirectory.cpp  PageDirectory.h  PageTable.cpp  PageTable.h  PhysicalPage.cpp  PhysicalPage.h  PhysicalRegion.cpp  PhysicalRegion.h  SafePointer.h  Stack.h  VMObject.cpp  VMObject.h  VMRegion.cpp  VMRegion.h  VMSpace.cpp  (+9 more)
kernel/net/: ARP.h  E1000Adapter.cpp  E1000Adapter.h  ICMP.h  IPSocket.cpp  IPSocket.h  NetworkAdapter.cpp  NetworkAdapter.h  NetworkManager.cpp  NetworkManager.h  Router.cpp  Router.h  Socket.cpp  Socket.h  TCPSocket.cpp  TCPSocket.h  UDPSocket.cpp  UDPSocket.h
kernel/pci/: PCI.cpp  PCI.h  pci.cpp  pci.h
kernel/syscall/: access.cpp  chdir.cpp  chmod.cpp  dup.cpp  exec.cpp  exit.cpp  fork.cpp  futex.cpp  getcwd.cpp  gettimeofday.cpp  ioctl.cpp  isatty.cpp  kill.cpp  link.cpp  mem.cpp  mkdir.cpp  pid.cpp  pipe.cpp  poll.cpp  ptrace.cpp  ptsname.cpp  read_write.cpp  sigaction.cpp  sleep.cpp  socket.cpp  stat.cpp  syscall.cpp  syscall.h  syscall_numbers.h  thread.cpp  truncate.cpp  uname.cpp  waitpid.cpp
kernel/tasking/: Blocker.cpp  Blocker.h  BooleanBlocker.cpp  BooleanBlocker.h  ELF.cpp  ELF.h  FileBlockers.cpp  FileBlockers.h  Futex.cpp  Futex.h  JoinBlocker.cpp  JoinBlocker.h  Lock.cpp  Lock.h  Mutex.cpp  Mutex.h  PollBlocker.cpp  PollBlocker.h  Process.cpp  Process.h  ProcessArgs.cpp  ProcessArgs.h  Reaper.cpp  Reaper.h  Signal.cpp  Signal.h  SleepBlocker.cpp  SleepBlocker.h  SpinLock.cpp  SpinLock.h  TSS.h  TaskBlockQueue.cpp  TaskBlockQueue.h  TaskManager.cpp  TaskManager.h  TaskYield.hpp  TaskYieldQueue.cpp  TaskYieldQueue.h  Thread.cpp  Thread.h  (+10 more)
kernel/terminal/: PTYControllerDevice.cpp  PTYControllerDevice.h  PTYDevice.cpp  PTYDevice.h  PTYMuxDevice.cpp  PTYMuxDevice.h  TTYDevice.cpp  TTYDevice.h  Terminal.cpp  Terminal.h  VirtualTTY.cpp  VirtualTTY.h
kernel/tests/: KernelTest.cpp  KernelTest.h  TestMemory.cpp
kernel/time/: CMOS.cpp  CMOS.h  PIT.cpp  PIT.h  RTC.cpp  RTC.h  Time.cpp  Time.h  TimeKeeper.cpp  TimeKeeper.h  TimeManager.cpp  TimeManager.h
libraries/: CMakeLists.txt
libraries/ld/: CMakeLists.txt  ld-duckos.ld  ld.cpp  ld.h  main.S
libraries/lib3d/: Buffer2D.h  BufferSet.h  CMakeLists.txt  MatrixUtil.cpp  MatrixUtil.h  ObjReader.cpp  ObjReader.h  RenderContext.cpp  RenderContext.h  Texture.cpp  Texture.h  Vertex.h  ViewportWidget.cpp  ViewportWidget.h
libraries/libapp/: App.cpp  App.h  CMakeLists.txt
libraries/libc/: CMakeLists.txt  assert.c  assert.h  complex.h  crt0.c  crti.S  crtn.S  ctype.c  ctype.h  cxxabi.c  (+66 more)
programs/: CMakeLists.txt  mirror.asm
(+937 files in other folders)
