ADD_COMPILE_OPTIONS(-O2)
ADD_SUBDIRECTORY(libc/)
ADD_SUBDIRECTORY(libm/)
ADD_SUBDIRECTORY(libpond/)
ADD_SUBDIRECTORY(ld/)
ADD_SUBDIRECTORY(libgraphics/)
ADD_SUBDIRECTORY(libui/)
ADD_SUBDIRECTORY(libterm/)
ADD_SUBDIRECTORY(libriver/)
ADD_SUBDIRECTORY(libduck/)
ADD_SUBDIRECTORY(libapp/)
ADD_SUBDIRECTORY(libsound/)
ADD_SUBDIRECTORY(libsys/)
ADD_SUBDIRECTORY(libkeyboard/)
ADD_SUBDIRECTORY(libtui/)
ADD_SUBDIRECTORY(lib3d/)
ADD_SUBDIRECTORY(libdebug/)