ADD_SUBDIRECTORY(ls/)
ADD_SUBDIRECTORY(dsh/)
ADD_SUBDIRECTORY(cat/)
ADD_SUBDIRECTORY(cp/)
ADD_SUBDIRECTORY(pwd/)
ADD_SUBDIRECTORY(rm/)
ADD_SUBDIRECTORY(ln/)
ADD_SUBDIRECTORY(mv/)
ADD_SUBDIRECTORY(rmdir/)
ADD_SUBDIRECTORY(mkdir/)
ADD_SUBDIRECTORY(touch/)
ADD_SUBDIRECTORY(truncate/)
ADD_SUBDIRECTORY(echo/)
ADD_SUBDIRECTORY(init/)
ADD_SUBDIRECTORY(chmod/)
ADD_SUBDIRECTORY(chown/)
ADD_SUBDIRECTORY(free/)
ADD_SUBDIRECTORY(sharedtest/)