SET(SOURCES ld.cpp)
set(CMAKE_SHARED_LIBRARY_LINK_C_FLAGS "-static")
set(CMAKE_SHARED_LIBRARY_LINK_CXX_FLAGS "-static")

SET(COMMON_SOURCES ${CMAKE_SOURCE_DIR}/common/cstddef.cpp)

ADD_EXECUTABLE(ld-duckos.so ${COMMON_SOURCES} ${SOURCES})
TARGET_INCLUDE_DIRECTORIES(ld-duckos.so PRIVATE ${CMAKE_SOURCE_DIR})
INSTALL(TARGETS ld-duckos.so RUNTIME DESTINATION lib)