SET(SOURCES ld.cpp)
set(CMAKE_SHARED_LIBRARY_LINK_C_FLAGS "-static")
set(CMAKE_SHARED_LIBRARY_LINK_CXX_FLAGS "-static")

ADD_EXECUTABLE(ld-duckos.so ${SOURCES})
SET(LINKER_SCRIPT ${CMAKE_SOURCE_DIR}/libraries/ld/ld-duckos.ld)
SET_TARGET_PROPERTIES(ld-duckos.so PROPERTIES LINK_DEPENDS ${LINKER_SCRIPT})
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -T ${LINKER_SCRIPT}")
INSTALL(TARGETS ld-duckos.so RUNTIME DESTINATION lib)