SET(SOURCES math.c)

# Make dynamic libm
ADD_LIBRARY(libm_dyn ${SOURCES})
INSTALL(TARGETS libm_dyn LIBRARY DESTINATION usr/lib)
SET_TARGET_PROPERTIES(libm_dyn PROPERTIES PREFIX "")
TARGET_LINK_DIRECTORIES(libm_dyn PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
ADD_CUSTOM_COMMAND(TARGET libm_dyn COMMAND install -D $<TARGET_FILE:libm_dyn> ${CMAKE_INSTALL_PREFIX}/usr/lib/libm.so)

# Make static libm
ADD_LIBRARY(libm_static STATIC ${SOURCES})
INSTALL(TARGETS libm_static LIBRARY DESTINATION usr/lib)
SET_TARGET_PROPERTIES(libm_static PROPERTIES PREFIX "")
TARGET_LINK_DIRECTORIES(libm_static PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
ADD_CUSTOM_COMMAND(TARGET libm_static COMMAND install -D $<TARGET_FILE:libm_static> ${CMAKE_INSTALL_PREFIX}/usr/lib/libm.a)

# Combine libc_dyn and libc_static
ADD_CUSTOM_TARGET(libm)
ADD_DEPENDENCIES(libm libm_dyn libm_static)

# Install headers
FILE(GLOB_RECURSE LIBHEADERS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.h")
foreach(HEADER ${LIBHEADERS})
    GET_FILENAME_COMPONENT(SUBDIRECTORY ${HEADER} DIRECTORY)
    INSTALL(FILES ${HEADER} DESTINATION usr/include)
endforeach()